--- a/src/locale/de/LC_MESSAGES/django.po
+++ b/src/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-01 14:50+0100\n"
+"POT-Creation-Date: 2022-01-01 19:50+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,27 +26,31 @@ msgstr "Englisch"
 msgid "German"
 msgstr "Deutsch"
 
-#: .\library\forms.py:13
+#: .\library\apps.py:9
+msgid "Library"
+msgstr "Bibliothek"
+
+#: .\library\forms.py:12
 msgid "Enter a date between now and 4 weeks (default 3)."
 msgstr "Gebe ein Datum zwischen jetzt und 4 Wochen ein (Standard 3)."
 
-#: .\library\forms.py:20
+#: .\library\forms.py:19
 msgid "Invalid date - renewal in past"
 msgstr "Ungültiges Datum - Verlängerung in der Vergangenheit"
 
-#: .\library\forms.py:24
+#: .\library\forms.py:23
 msgid "Invalid date - renewal more than 4 weeks ahead"
 msgstr "Ungültiges datum - Verlängerung mehr als 4 Wochen voraus"
 
-#: .\library\forms.py:34 .\library\templates\library\openinghours.html:8
+#: .\library\forms.py:33 .\library\templates\library\openinghours.html:8
 msgid "Open from"
 msgstr "Offen von"
 
-#: .\library\forms.py:35 .\library\templates\library\openinghours.html:9
+#: .\library\forms.py:34 .\library\templates\library\openinghours.html:9
 msgid "Open until"
 msgstr "Offen bis"
 
-#: .\library\forms.py:42
+#: .\library\forms.py:41
 msgid "Library must be open before closing 😉"
 msgstr "Bibliothek muss öffnen bevor sie schließt 😉"
 
@@ -60,6 +64,8 @@ msgid ""
 "Your loans that are past their due date:\n"
 "\r"
 msgstr ""
+"Deine Ausleihen sind fällig am: \n"
+"\r"
 
 #: .\library\mail.py:49
 msgid ""
@@ -82,129 +88,355 @@ msgstr "Hallo %(first_name)s %(lastname)s,\r\n"
 msgid "Enter a book genre (e.g. Science Fiction)"
 msgstr "Gebe ein Büchergenre ein (z.B. Science Fiction)"
 
-#: .\library\models.py:43
+#: .\library\models.py:16 .\library\models.py:351
+#: .\library\templates\library\materialInstanceTable.html:5
+#: .\library\templates\library\materialTable.html:4
+msgid "Name"
+msgstr "Name"
+
+#: .\library\models.py:23 .\library\models.py:24 .\library\models.py:70
+#: .\library\templates\library\book.html:11
+msgid "Genre"
+msgstr "Genre"
+
+#: .\library\models.py:38 .\library\models.py:254
+#: .\library\templates\library\material.html:5
+#: .\library\templates\library\materialInstance-detail.html:5
+#: .\library\templates\library\nav_sidebar.html:8
+msgid "Material"
+msgstr "Material"
+
+#: .\library\models.py:39 .\library\templates\library\index.html:14
+#: .\library\templates\library\search.html:34
+msgid "Materials"
+msgstr "Materialien"
+
+#: .\library\models.py:44
+#: .\library\templates\library\borrow-user-search.html:25
+#: .\library\templates\library\userTable.html:5
+#, fuzzy
+#| msgid "First Name"
+msgid "First name"
+msgstr "Vorname"
+
+#: .\library\models.py:45
+#: .\library\templates\library\borrow-user-search.html:26
+#: .\library\templates\library\userTable.html:6
+#, fuzzy
+#| msgid "Last Name"
+msgid "Last name"
+msgstr "Nachname"
+
+#: .\library\models.py:46 .\library\templates\library\author.html:6
+msgid "Date of birth"
+msgstr "Geburtsdatum"
+
+#: .\library\models.py:47
+msgid "Date of death"
+msgstr "Todesdatum"
+
+#: .\library\models.py:62
 msgid "Can add, update or delete an author"
 msgstr "Kann Autor hinzufügen, ändern oder löschen"
 
-#: .\library\models.py:59 .\library\models.py:204
-#: .\library\templates\library\books.html:10
-msgid "by"
-msgstr "von"
-
-#: .\library\models.py:67
-msgid "Select the autor(s) of this book."
-msgstr "Wähle den/die Autor(en) für dieses Buch aus."
-
-#: .\library\models.py:68
-msgid "Select a genre for this book."
-msgstr "Wähle das Genre für dieses Buch aus."
-
-#: .\library\models.py:69
-msgid "Enter a brief description of the book."
-msgstr "Gebe eine kurze Beschreibung für dieses Buch ein."
-
-#: .\library\models.py:70
-msgid "ISBN number (13 Characters)"
-msgstr "ISBN Nummer (13 Zeichen)"
-
-#: .\library\models.py:77
-msgid "Enter a natural languages name (e.g. English, French, Japanese etc.)."
-msgstr ""
-"Gib eine natürliche Sprache (z.B. Deutsch, Englisch, Französisch etc.) ein."
-
-#: .\library\models.py:88
-msgid "The UID of a NFC chip (e.g. in a student id)."
-msgstr "Die UID eines NFC chips (z.B. eines Studierendenausweis)."
-
-#: .\library\models.py:106
-msgid "Unique ID for this particular item across whole library."
-msgstr "Eindeutige ID für dieses Item in der gesamten Bibliothek."
-
-#: .\library\models.py:110
-msgid "Maintenance"
-msgstr "Wartung"
-
-#: .\library\models.py:111
-msgid "On loan"
-msgstr "Ausgeliehen"
-
-#: .\library\models.py:112
-msgid "Available"
-msgstr "Verfügbar"
-
-#: .\library\models.py:113
-msgid "Reserved"
-msgstr "Reserviert"
-
-#: .\library\models.py:121
-msgid "Item availability"
-msgstr "Item Verfügbarkeit"
-
-#: .\library\models.py:125
-msgid "Set item as returned"
-msgstr "Markiere Item als zurückgegeben"
-
-#: .\library\models.py:126
-msgid "See all borrowed items"
-msgstr "Sehe alle ausgeliehene Items"
-
-#. Translators: Is shown instead of a person that borrowed the item
-#: .\library\models.py:197 .\library\tests\test_models.py:291
-msgid "Not borrowed"
-msgstr "Nicht ausgeliehen"
-
-#: .\library\models.py:274
-msgid "Can add a loan for all user"
-msgstr "Kann allen Bentuzer eine Ausleihe hinzufügen"
-
-#: .\library\models.py:278
-msgid "Monday"
-msgstr "Montag"
-
-#: .\library\models.py:279
-msgid "Tuesday"
-msgstr "Dienstag"
-
-#: .\library\models.py:280
-msgid "Wednesday"
-msgstr "Mittwoch"
-
-#: .\library\models.py:281
-msgid "Thursday"
-msgstr "Donnerstag"
-
-#: .\library\models.py:282
-msgid "Friday"
-msgstr "Freitag"
-
-#: .\library\models.py:283
-msgid "Saturday"
-msgstr "Samstag"
-
-#: .\library\models.py:284
-msgid "Sunday"
-msgstr "Sonntag"
-
-#: .\library\models.py:297
-msgid "Can change opening hours"
-msgstr "Kann Öffnungszeiten ändern"
-
-#: .\library\models.py:309
-msgid "Unique ID for this room"
-msgstr "Eindeutige ID für diesen Raum"
-
-#: .\library\models.py:311
-msgid "Users that are allowed to access this room."
-msgstr "Benutzer, die eine Zutrittsberechtigung für diesen Raum haben."
-
+#: .\library\models.py:63 .\library\models.py:69
 #: .\library\templates\library\author.html:5
 #: .\library\templates\library\bookTable.html:6
 msgid "Author"
 msgstr "Autor"
 
-#: .\library\templates\library\author.html:6
-msgid "Date of birth"
-msgstr "Geburtsdatum"
+#: .\library\models.py:64 .\library\templates\library\index.html:13
+#: .\library\templates\library\nav_sidebar.html:9
+msgid "Authors"
+msgstr "Autoren"
+
+#: .\library\models.py:68
+msgid "Titel"
+msgstr "Titel"
+
+#: .\library\models.py:69
+msgid "Select the autor(s) of this book."
+msgstr "Wähle den/die Autor(en) für dieses Buch aus."
+
+#: .\library\models.py:70
+msgid "Select a genre for this book."
+msgstr "Wähle das Genre für dieses Buch aus."
+
+#: .\library\models.py:71
+msgid "Enter a brief description of the book."
+msgstr "Gebe eine kurze Beschreibung für dieses Buch ein."
+
+#: .\library\models.py:71 .\library\templates\library\book.html:8
+msgid "Summary"
+msgstr "Zusammenfassung"
+
+#: .\library\models.py:72
+msgid "ISBN number (13 Characters)"
+msgstr "ISBN Nummer (13 Zeichen)"
+
+#: .\library\models.py:72 .\library\templates\library\book.html:9
+msgid "ISBN"
+msgstr "ISBN"
+
+#: .\library\models.py:73 .\library\models.py:99
+#: .\library\templates\library\book.html:10
+#: .\library\templates\library\member.html:11
+msgid "Language"
+msgstr "Sprache"
+
+#: .\library\models.py:76 .\library\models.py:229
+#: .\library\templates\library\books.html:10
+msgid "by"
+msgstr "von"
+
+#: .\library\models.py:84 .\library\models.py:236
+#: .\library\templates\library\bookInstance-detail.html:5
+msgid "Book"
+msgstr "Buch"
+
+#: .\library\models.py:85 .\library\templates\library\index.html:10
+#: .\library\templates\library\nav_sidebar.html:7
+#: .\library\templates\library\search.html:23
+msgid "Books"
+msgstr "Bücher"
+
+#: .\library\models.py:90
+msgid "Enter a natural languages name (e.g. English, French, Japanese etc.)."
+msgstr ""
+"Gib eine natürliche Sprache (z.B. Deutsch, Englisch, Französisch etc.) ein."
+
+#: .\library\models.py:100
+msgid "Languages"
+msgstr "Sprachen"
+
+#: .\library\models.py:104 .\library\templates\library\search.html:13
+msgid "User"
+msgstr "Benutzer"
+
+#: .\library\models.py:105
+#, fuzzy
+#| msgid "No preferred language set."
+msgid "Preffered language"
+msgstr "Keine bevorzugte Sprache gesetzt."
+
+#: .\library\models.py:106
+msgid "The UID of a NFC chip (e.g. in a student id)."
+msgstr "Die UID eines NFC chips (z.B. eines Studierendenausweis)."
+
+#: .\library\models.py:106 .\library\templates\library\member.html:16
+msgid "UID"
+msgstr "UID"
+
+#: .\library\models.py:120
+msgid "Member"
+msgstr "Mitglied"
+
+#: .\library\models.py:121
+msgid "Members"
+msgstr "Mitglieder"
+
+#: .\library\models.py:128
+msgid "Unique ID for this particular item across whole library."
+msgstr "Eindeutige ID für dieses Item in der gesamten Bibliothek."
+
+#: .\library\models.py:129 .\library\models.py:350
+#: .\library\templates\library\book.html:26
+#: .\library\templates\library\loan-detail.html:21
+#: .\library\templates\library\material.html:18
+#: .\library\templates\library\materialInstance-detail.html:24
+msgid "Id"
+msgstr "Id"
+
+#: .\library\models.py:130 .\library\templates\library\bookInstanceTable.html:4
+#: .\library\templates\library\item-search.html:14
+#: .\library\templates\library\materialInstanceTable.html:4
+msgid "Label"
+msgstr "Label"
+
+#: .\library\models.py:133
+msgid "Maintenance"
+msgstr "Wartung"
+
+#: .\library\models.py:134
+msgid "On loan"
+msgstr "Ausgeliehen"
+
+#: .\library\models.py:135
+msgid "Available"
+msgstr "Verfügbar"
+
+#: .\library\models.py:136
+msgid "Reserved"
+msgstr "Reserviert"
+
+#: .\library\models.py:144
+msgid "Item availability"
+msgstr "Item Verfügbarkeit"
+
+#: .\library\models.py:148
+msgid "Set item as returned"
+msgstr "Markiere Item als zurückgegeben"
+
+#: .\library\models.py:149
+msgid "See all borrowed items"
+msgstr "Sehe alle ausgeliehene Items"
+
+#: .\library\models.py:150 .\library\models.py:263
+msgid "Item"
+msgstr "Item"
+
+#: .\library\models.py:151 .\library\templates\library\material.html:8
+msgid "Items"
+msgstr "Items"
+
+#. Translators: Is shown instead of a person that borrowed the item
+#: .\library\models.py:222 .\library\tests\test_models.py:291
+msgid "Not borrowed"
+msgstr "Nicht ausgeliehen"
+
+#: .\library\models.py:237 .\library\templates\library\book.html:25
+msgid "Imprint"
+msgstr "Impressum"
+
+#: .\library\models.py:240
+msgid "Book instance"
+msgstr "Bücherinstanze"
+
+#: .\library\models.py:241 .\library\templates\library\search.html:45
+msgid "Book instances"
+msgstr "Bücherinstanzen"
+
+#: .\library\models.py:257
+#, fuzzy
+#| msgid "Material instances"
+msgid "Material instance"
+msgstr "Materialinstanz"
+
+#: .\library\models.py:258 .\library\templates\library\search.html:56
+msgid "Material instances"
+msgstr "Materialinstanz"
+
+#: .\library\models.py:262
+#: .\library\templates\library\item_renew_librarian.html:6
+msgid "Borrower"
+msgstr "Ausleihender"
+
+#: .\library\models.py:264
+msgid "Lent on"
+msgstr "Ausgeliehen am"
+
+#: .\library\models.py:265
+#, fuzzy
+#| msgid "Due date"
+msgid "Due back"
+msgstr "Bis"
+
+#: .\library\models.py:266 .\library\templates\library\loan-detail.html:10
+msgid "Returned on"
+msgstr "Zurückgegeben am"
+
+#: .\library\models.py:307
+msgid "Can add a loan for all user"
+msgstr "Kann allen Bentuzer eine Ausleihe hinzufügen"
+
+#: .\library\models.py:308 .\library\models.py:341
+#: .\library\templates\library\loan-detail.html:5
+msgid "Loan"
+msgstr "Ausleihe"
+
+#: .\library\models.py:309
+msgid "Loans"
+msgstr "Ausleihen"
+
+#: .\library\models.py:313
+msgid "Monday"
+msgstr "Montag"
+
+#: .\library\models.py:314
+msgid "Tuesday"
+msgstr "Dienstag"
+
+#: .\library\models.py:315
+msgid "Wednesday"
+msgstr "Mittwoch"
+
+#: .\library\models.py:316
+msgid "Thursday"
+msgstr "Donnerstag"
+
+#: .\library\models.py:317
+msgid "Friday"
+msgstr "Freitag"
+
+#: .\library\models.py:318
+msgid "Saturday"
+msgstr "Samstag"
+
+#: .\library\models.py:319
+msgid "Sunday"
+msgstr "Sonntag"
+
+#: .\library\models.py:324 .\library\templates\library\openinghours.html:7
+msgid "Weekday"
+msgstr "Wochentag"
+
+#: .\library\models.py:325
+msgid "From hour"
+msgstr "VOn Stunde"
+
+#: .\library\models.py:326
+msgid "To hour"
+msgstr "Bis Stunde"
+
+#: .\library\models.py:327 .\library\templates\library\openinghours.html:10
+msgid "Comment"
+msgstr "Kommentar"
+
+#: .\library\models.py:332
+msgid "Can change opening hours"
+msgstr "Kann Öffnungszeiten ändern"
+
+#: .\library\models.py:333
+#, fuzzy
+#| msgid "Opening hours"
+msgid "Opening hour"
+msgstr "Öffnungszeiten"
+
+#: .\library\models.py:334 .\library\templates\library\nav_sidebar.html:10
+msgid "Opening hours"
+msgstr "Öffnungszeiten"
+
+#: .\library\models.py:342
+msgid "Sent on"
+msgstr "Gesendet an"
+
+#: .\library\models.py:345
+msgid "Loan Reminder"
+msgstr "Ausleiheerinnerung"
+
+#: .\library\models.py:346
+msgid "Loan Reminders"
+msgstr "Ausheiheerinnerungen"
+
+#: .\library\models.py:350
+msgid "Unique Id for this room"
+msgstr "Eindeutige ID für diesen Raum"
+
+#: .\library\models.py:352
+msgid "Users that are allowed to access this room."
+msgstr "Benutzer, die eine Zutrittsberechtigung für diesen Raum haben."
+
+#: .\library\models.py:352
+msgid "Allowed user"
+msgstr "Erlaubte Benutzer"
+
+#: .\library\models.py:362
+msgid "Room"
+msgstr "Raum"
+
+#: .\library\models.py:363
+msgid "Rooms"
+msgstr "Räume"
 
 #: .\library\templates\library\author.html:10
 msgid "Books by this author"
@@ -245,23 +477,6 @@ msgstr "Titel"
 msgid "Author(s)"
 msgstr "Autor(en)"
 
-#: .\library\templates\library\book.html:8
-msgid "Summary"
-msgstr "Zusammenfassung"
-
-#: .\library\templates\library\book.html:9
-msgid "ISBN"
-msgstr "ISBN"
-
-#: .\library\templates\library\book.html:10
-#: .\library\templates\library\member.html:11
-msgid "Language"
-msgstr "Sprache"
-
-#: .\library\templates\library\book.html:11
-msgid "Genre"
-msgstr "Genre"
-
 #: .\library\templates\library\book.html:14
 #: .\library\templates\library\index.html:11
 msgid "Copies"
@@ -275,32 +490,11 @@ msgstr "Exemplare"
 msgid "Due to be returned"
 msgstr "Zurückzugeben bis"
 
-#: .\library\templates\library\book.html:25
-msgid "Imprint"
-msgstr "Impressum"
-
-#: .\library\templates\library\book.html:26
-#: .\library\templates\library\loan-detail.html:21
-#: .\library\templates\library\material.html:18
-#: .\library\templates\library\materialInstance-detail.html:24
-msgid "Id"
-msgstr "Id"
-
-#: .\library\templates\library\bookInstance-detail.html:5
-msgid "Book"
-msgstr "Buch"
-
 #: .\library\templates\library\bookInstance-detail.html:12
 #: .\library\templates\library\loan-detail.html:15
 #: .\library\templates\library\materialInstance-detail.html:12
 msgid "Borrowed by"
 msgstr "Ausgeliehen von"
-
-#: .\library\templates\library\bookInstanceTable.html:4
-#: .\library\templates\library\item-search.html:14
-#: .\library\templates\library\materialInstanceTable.html:4
-msgid "Label"
-msgstr "Label"
 
 #: .\library\templates\library\bookInstanceTable.html:6
 #: .\library\templates\library\item-search.html:15
@@ -341,16 +535,6 @@ msgstr "Keine Bücher verfügbar."
 msgid "Username"
 msgstr "Benutzername"
 
-#: .\library\templates\library\borrow-user-search.html:25
-#: .\library\templates\library\userTable.html:5
-msgid "First Name"
-msgstr "Vorname"
-
-#: .\library\templates\library\borrow-user-search.html:26
-#: .\library\templates\library\userTable.html:6
-msgid "Last Name"
-msgstr "Nachname"
-
 #: .\library\templates\library\header.html:6
 msgid "About the software"
 msgstr "Über die Software"
@@ -371,25 +555,9 @@ msgstr "Statistiken"
 msgid "The library has the following record counts:"
 msgstr "Die Bibliothek hat die folgenden Daten:"
 
-#: .\library\templates\library\index.html:10
-#: .\library\templates\library\nav_sidebar.html:7
-#: .\library\templates\library\search.html:23
-msgid "Books"
-msgstr "Bücher"
-
 #: .\library\templates\library\index.html:12
 msgid "Copies available"
 msgstr "Exemplare verfügbar"
-
-#: .\library\templates\library\index.html:13
-#: .\library\templates\library\nav_sidebar.html:9
-msgid "Authors"
-msgstr "Autoren"
-
-#: .\library\templates\library\index.html:14
-#: .\library\templates\library\search.html:34
-msgid "Materials"
-msgstr "Materialien"
 
 #: .\library\templates\library\index.html:15
 msgid "Materials available"
@@ -405,10 +573,6 @@ msgstr "Suche nach einem Item nach Bezeichnung"
 #: .\library\templates\library\materialInstance-detail.html:16
 msgid "Renew"
 msgstr "Verlängern"
-
-#: .\library\templates\library\item_renew_librarian.html:6
-msgid "Borrower"
-msgstr "Ausleihender"
 
 #: .\library\templates\library\item_renew_librarian.html:7
 msgid "Due date"
@@ -439,29 +603,6 @@ msgstr "Ausgeliehene Materialien"
 msgid "There are no materials borrowed."
 msgstr "Es sind keine Materialien ausgeliehen."
 
-#: .\library\templates\library\loan-detail.html:5
-msgid "Loan"
-msgstr "Ausleihe"
-
-#: .\library\templates\library\loan-detail.html:10
-msgid "Returned on"
-msgstr "Zurückgegeben am"
-
-#: .\library\templates\library\material.html:5
-#: .\library\templates\library\materialInstance-detail.html:5
-#: .\library\templates\library\nav_sidebar.html:8
-msgid "Material"
-msgstr "Material"
-
-#: .\library\templates\library\material.html:8
-msgid "Items"
-msgstr ""
-
-#: .\library\templates\library\materialInstanceTable.html:5
-#: .\library\templates\library\materialTable.html:4
-msgid "Name"
-msgstr "Name"
-
 #: .\library\templates\library\materials.html:13
 msgid "No materials are available."
 msgstr "Keine Materialien verfügbar."
@@ -474,13 +615,15 @@ msgstr "E-Mail"
 msgid "No preferred language set."
 msgstr "Keine bevorzugte Sprache gesetzt."
 
-#: .\library\templates\library\member.html:16
-msgid "UID"
-msgstr "UID"
-
 #: .\library\templates\library\member.html:18
 msgid "No UID set."
 msgstr "Keine UID gesetzt."
+
+#: .\library\templates\library\member.html:23
+#, fuzzy
+#| msgid "Delete API token"
+msgid "API token:"
+msgstr "Lösche API token"
 
 #: .\library\templates\library\member.html:24
 msgid "Delete API token"
@@ -502,10 +645,6 @@ msgstr "Start"
 #: .\library\templates\library\search.html:9
 msgid "Search"
 msgstr "Suche"
-
-#: .\library\templates\library\nav_sidebar.html:10
-msgid "Opening hours"
-msgstr "Öffnungszeiten"
 
 #: .\library\templates\library\nav_sidebar.html:12
 msgid "All loans"
@@ -531,14 +670,6 @@ msgstr "Admin"
 msgid "Yes, delete."
 msgstr "Ja, löschen."
 
-#: .\library\templates\library\openinghours.html:7
-msgid "Weekday"
-msgstr "Wochentag"
-
-#: .\library\templates\library\openinghours.html:10
-msgid "Comment"
-msgstr "Kommentar"
-
 #: .\library\templates\library\openinghours.html:12
 msgid "Delete"
 msgstr "Löschen"
@@ -555,10 +686,6 @@ msgstr "Erstelle neue Öffnungszeiten"
 msgid "Search for any item or user"
 msgstr "Suche nach einem Item oder Benutzer"
 
-#: .\library\templates\library\search.html:13
-msgid "User"
-msgstr "Benutzer"
-
 #: .\library\templates\library\search.html:19
 msgid "No user found."
 msgstr "Kein Benutzer gefunden."
@@ -571,17 +698,9 @@ msgstr "Keine Bücher gefunden."
 msgid "No materials found."
 msgstr "Kein Material gefunden."
 
-#: .\library\templates\library\search.html:45
-msgid "Book instances"
-msgstr "Bücherinstanz"
-
 #: .\library\templates\library\search.html:51
 msgid "No book instances found."
 msgstr "Keine Bücherinstanz gefunden."
-
-#: .\library\templates\library\search.html:56
-msgid "Material instances"
-msgstr "Materialinstanz"
 
 #: .\library\templates\library\search.html:62
 msgid "No material instances found."
